# Pynkie

./: README.md  pyproject.toml
src/pynkie/: __init__.py  debug.py  elements.py  events.py  model.py  run.py  setup.py  view.py
src/pynkie/stubs/: __init__.pyi  debug.pyi  elements.pyi  events.pyi  model.pyi  run.pyi
stubs/: __init__.pyi  elements.pyi  run.pyi  view.pyi
stubs/pynkie/: __init__.pyi  run.pyi  setup.pyi  view.pyi
