[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynkie"
version = "0.0.1"
dependencies = [
    "pygame==2.5.*"
]
authors = [
  { name="Han Hollander" },
  { name="Wijtse Rekker" },
]
description = "Extension framework for Pygame"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HanHollander/Pynkie"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]